# ECDSA

./: .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml
docs/: BENCHMARK_METHODOLOGY.md  PARAMETER_GENERATION.md  PARAMETER_PROVENANCE.md  REPRODUCIBILITY.md  RESULTS.md  SIDE_CHANNELS.md
notebooks/: eddsa-original.ipynb
paper/: EDDSA_67CS.docx
parameters/: curves.json  generated-safe-prime-v1.json  validation-report.json
results/: reported-results.csv
scripts/: plot_results.py
src/cpp/: benchmark.cpp
src/python/: benchmark.py  eddsa_reference.py
tests/: test_curve.py  test_generation_tools.py
tools/: generate_curve.sage  generate_safe_prime.py  validate_parameters.py
